@@ -2,6 +2,11 @@ New in spot 2.10.5.dev  (not yet released)
 
   Nothing yet.
 
+  - make_twa_graph() will now preserve state number when copying a
+    kripke_graph object.  As a consequence, print_dot() and
+    print_hoa() will now use state numbers matching those of the
+    kripke_graph (issue #505).
+
 New in spot 2.10.5  (2022-05-03)
 
   Bugs fixed:
